# libhttpserver

./: .gitignore  CMakeLists.txt  ChangeLog  README.md
examples/: allowing_disallowing_methods.cpp  basic_authentication.cpp  benchmark_nodelay.cpp  benchmark_select.cpp  benchmark_threads.cpp  custom_access_log.cpp  custom_error.cpp  deferred_with_accumulator.cpp  digest_authentication.cpp  file_upload.cpp  handlers.cpp  hello_with_get_arg.cpp  hello_world.cpp  minimal_deferred.cpp  minimal_file_response.cpp  minimal_hello_world.cpp  minimal_https.cpp  minimal_ip_ban.cpp  service.cpp  setting_headers.cpp  url_registration.cpp
src/: basic_auth_fail_response.cpp  deferred_response.cpp  digest_auth_fail_response.cpp  file_info.cpp  file_response.cpp  http_request.cpp  http_resource.cpp  http_response.cpp  http_utils.cpp  httpserver.h  string_response.cpp  webserver.cpp
src/details/: http_endpoint.cpp
src/httpserver/: basic_auth_fail_response.h  create_webserver.h  deferred_response.h  digest_auth_fail_response.h  file_info.h  file_response.h  http_arg_value.h  http_request.h  http_resource.h  http_response.h  http_utils.h  string_response.h  string_utilities.h  webserver.h
src/httpserver/details/: http_endpoint.h  modded_request.h
src/include/utils/: string_view.h
test/: CMakeLists.txt  CPPLINT.cfg  Makefile.am
test/integ/: authentication.cpp  ban_system.cpp  basic.cpp  deferred.cpp  file_upload.cpp  nodelay.cpp  threaded.cpp  ws_start_stop.cpp
test/unit/: http_endpoint_test.cpp  http_resource_test.cpp  http_utils_test.cpp  string_utilities_test.cpp
